Fix bug 4133139: Footer at the bottom.  Remove the scrollbar when not needed.

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -6,13 +6,13 @@ div, h1, h2, h3, h4, h5, h6, p, ul, ol, li, form, fieldset, table, td, th {
 
 html {
 	font-size: 62.5%;
-	height: 100%;
+	height: 97%;
 }
 
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 1.2em;
-	height: 100%;
+	height: 97%;
 }
 
 /*Opera Fix*/
@@ -51,7 +51,7 @@ a.desc {
 }
 
 #wrap {
-	min-height: 100%;
+	min-height: 97%;
 }
 
 #footer {
@@ -62,8 +62,8 @@ a.desc {
     clear: both;
     color: #999;
     position: relative;
-	margin-top: -50px; /* negative value of footer height */
-	height: 50px;
+	margin-top: -20px; /* negative value of footer height */
+	height: 20px;
 }
 
 form#feedback table td {
@@ -170,7 +170,7 @@ div#content {
 	padding: 1.5em;
 	clear: both;
 	overflow:auto;
-	padding-bottom: 50px;
+	padding-bottom: 20px;
 }
 
 div.back-link {
